<resources>
    <string name="app_name">tp3v2</string>
    <string name="Usuario_Title1">Usuario:</string>
    <string name="Usuario_Title2">Usuario</string>
    <string name="Contraseña_Title1">Contraseña:</string>
    <string name="Contraseña_Title2">Contraseña</string>
    <string name="InciarSesion">Inciar Sesion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="CorreoElectronico">Correo Electronico</string>
    <string name="Whatsapp">Whatsapp</string>
    <string name="Instagram">Instagram</string>
    <string name="Facebook">Facebook</string>
    <string name="Telefono">Telefono</string>
    <string name="GitHub">GitHub</string>
    <string name="PaginaWeb">Pagina Web</string>
    <string name="AcercadeNosotros">Acerca de Nosotros</string>
    <string name="AcercadelDeveloper">Acerca del Developer</string>
    <string name="Proximamente1">Proximamente</string>
    <string name="Proximamente2">Proximamente</string>
    <string name="Salir">Salir</string>
    <string name="Razer_Title">Razer</string>
    <string name="Razer_Texto"> Razer™ es la marca líder mundial en estilo de vida para gamers. La serpiente con tres cabezas, marca comercial de Razer, es uno de los logotipos más reconocidos en las comunidades de esports y juegos de todo el mundo. </string>

    <string name="Developer">Programador/Desarrollador</string>
    <string name="Nombre">Nombre: </string>
    <string name="MatiasJulian">Matias Julian </string>
    <string name="Apellido">Apellido: </string>
    <string name="SantiamenPerez">Santiamen Perez </string>
    <string name="Provincia">Provincia: </string>
    <string name="LaPampa">La Pampa </string>
    <string name="Localidad">Localidad: </string>
    <string name="SantaRosa">Santa Rosa </string>
    <string name="Telefono1">Telefono: </string>
    <string name="NumeroFisico"> 2954-335959 </string>
    <string name="Contactar">Contactar</string>

</resources>